tests/snapshots/gossip_snapshot__same_live_content_divergent_versions.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip(a, b)"
---
direction A -> B
role: Responder
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (132 bytes) / greeting /
24_0(<<{
    "listing": {
        142_0: h'1b5c7a2a860aa40597f61b26a1d3d54b48591068e45aed32',
    },
    "set_len": 1,
    "version": 53846_1(h'4924'),
    "max_version_bytes": 1,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
Responder stream 0 (height 31), epoch 0, 8 wire bytes
  frame 0 (3 bytes) / Match(End) /
[0, 1]
  frame 1 (3 bytes) / End(Stream) /
[0, 9]

direction B -> A
role: Initiator
control item 0 (30 bytes) / preamble /
55799_1([
    "rumors",
    2,
    h'b2f7f581d6de3c06a822fd6e7e8265fb',
    0,
])
control item 1 (131 bytes) / greeting /
24_0(<<{
    "listing": {
        142_0: h'1b5c7a2a860aa40597f61b26a1d3d54b48591068e45aed32',
    },
    "set_len": 1,
    "version": 53846_1(h'a8'),
    "max_version_bytes": 1,
    "payload_depth_limit": 256_1,
    "target_message_size": 1830400_2,
}>>)
control item 2 (2 bytes) / epilogue /
"."
