tests/snapshots/gossip_snapshot__v1_one_sided_transfer.snap
---
source: tests/gossip_snapshot.rs
expression: "capture_gossip_v1(a, b)"
---
party A                         │ party B
─────────────────────────────── │ ───────────────────────────────
sent 25 bytes                   │ sent 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 8c 18 96 68 c9 e4 83 72 │   0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70 │   0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00                      │   0018: 00
received 25 bytes               │ received 25 bytes
  0000: 52 55 4d 4f 52 53 00 01 │   0000: 52 55 4d 4f 52 53 00 01
  0008: 8c 18 96 68 c9 e4 83 72 │   0008: 8c 18 96 68 c9 e4 83 72
  0010: 37 bf 31 e0 2d 7f 6b 70 │   0010: 37 bf 31 e0 2d 7f 6b 70
  0018: 00                      │   0018: 00
sent 6 bytes                    │ sent 5 bytes
  0000: 00 00 00 02 5c 80       │   0000: 00 00 00 01 c0
received 13 bytes               │ received 6 bytes
  0000: 00 00 00 01 c0 00 00 00 │   0000: 00 00 00 02 5c 80
  0008: 04 00 00 00 00          │ sent 8 bytes
sent 42 bytes                   │   0000: 00 00 00 04 00 00 00 00
  0000: 00 00 00 26 02 00 00 00 │ received 42 bytes
  0008: b4 3d 42 eb bd b1 61 74 │   0000: 00 00 00 26 02 00 00 00
  0010: 27 71 09 ad 9a 06 ee d5 │   0008: b4 3d 42 eb bd b1 61 74
  0018: d9 b7 16 3d ab 85 10 43 │   0010: 27 71 09 ad 9a 06 ee d5
  0020: 46 3b 17 5f d9 e4 72 71 │   0018: d9 b7 16 3d ab 85 10 43
  0028: 4c e4                   │   0020: 46 3b 17 5f d9 e4 72 71
received 18 bytes               │   0028: 4c e4
  0000: 00 00 00 0e 00 00 00 00 │ sent 18 bytes
  0008: 02 00 00 00 b4 b7 00 00 │   0000: 00 00 00 0e 00 00 00 00
  0010: 00 00                   │   0008: 02 00 00 00 b4 b7 00 00
sent 102 bytes                  │   0010: 00 00
  0000: 00 00 00 62 02 00 00 00 │ received 102 bytes
  0008: b4 51 1e c9 66 a4 90 8c │   0000: 00 00 00 62 02 00 00 00
  0010: 46 7a 18 ce 3f a9 aa 66 │   0008: b4 51 1e c9 66 a4 90 8c
  0018: 5f f5 77 54 2c e3 13 a1 │   0010: 46 7a 18 ce 3f a9 aa 66
  0020: 0d 3a 85 32 2e 5e 62 5a │   0018: 5f f5 77 54 2c e3 13 a1
  0028: 07 55 00 01 00 00 00 00 │   0020: 0d 3a 85 32 2e 5e 62 5a
  0030: 00 00 00 b7 c0 1e aa 81 │   0028: 07 55 00 01 00 00 00 00
  0038: f5 78 51 8e 0f 44 98 cd │   0030: 00 00 00 b7 c0 1e aa 81
  0040: 74 6f 26 a0 61 09 e9 ad │   0038: f5 78 51 8e 0f 44 98 cd
  0048: 67 82 eb 89 51 08 66 fc │   0040: 74 6f 26 a0 61 09 e9 ad
  0050: a8 a3 d8 ec 5c 80 02 00 │   0048: 67 82 eb 89 51 08 66 fc
  0058: 00 00 00 00 00 00 00 00 │   0050: a8 a3 d8 ec 5c 80 02 00
  0060: 00 00 00 00 00 00       │   0058: 00 00 00 00 00 00 00 00
                                │   0060: 00 00 00 00 00 00
